--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -5,6 +5,10 @@
 body {
   font-family: Arial, Helvetica, sans-serif;
   > * {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+
     /* Style the scrollbar track */
     ::-webkit-scrollbar-track {
       background: transparent;
